--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 GOOGLE_API_KEY=AIzaSyB2jBs3rgJLCuYiCmPTMCEWZcd2qRQn1hI
 DEEPGAM_API_KEY=d65690f33b8a70c051365e568447c98551f8bf25
+MONGODB_URI=mongodb+srv://Hackathon:59ILYisG4iNaGNRU@cluster0.w6oegog.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
