--- a/frontend/web/package.json
+++ b/frontend/web/package.json
@@ -34,6 +34,7 @@
     "react-router-dom": "^6.27.0",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
+    "react-typed": "^2.0.12",
     "slick-carousel": "^1.8.1",
     "three": "^0.169.0"
   },
