--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,10 @@
 GOOGLE_API_KEY=AIzaSyB2jBs3rgJLCuYiCmPTMCEWZcd2qRQn1hI
 DEEPGAM_API_KEY=d65690f33b8a70c051365e568447c98551f8bf25
 MONGODB_URI=mongodb+srv://Hackathon:59ILYisG4iNaGNRU@cluster0.w6oegog.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+LANGCHAIN_API_KEY="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"
+LANGCHAIN_TRACING_V2=true
+LANGCHAIN_ENDPOINT="https://api.smith.langchain.com"
+# LANGCHAIN_API_KEY="<your-api-key>"
+TAVILY_API_KEY="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"
+LANGCHAIN_PROJECT="langgraph-prerequist"
+groq_api_key="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"
