--- a/frontend/web/package.json
+++ b/frontend/web/package.json
@@ -14,12 +14,14 @@
     "@emotion/styled": "^11.13.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
     "@react-three/drei": "^9.114.6",
     "@react-three/fiber": "^8.17.10",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "fortawesome": "^0.0.1-security",
@@ -28,12 +30,15 @@
     "mongoose": "^8.7.2",
     "react": "^18.3.1",
     "react-card-flip": "^1.2.3",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
+    "react-spinner": "^0.2.7",
+    "react-spinners": "^0.14.1",
     "react-typed": "^2.0.12",
     "slick-carousel": "^1.8.1",
     "three": "^0.169.0"
