--- a/frontend/web/package.json
+++ b/frontend/web/package.json
@@ -21,12 +21,14 @@
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "chartjs": "^0.3.24",
     "chartjs-adapter-date-fns": "^3.0.0",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "fortawesome": "^0.0.1-security",
     "framer-motion": "^11.11.9",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.453.0",
     "mongoose": "^8.7.2",
     "react": "^18.3.1",
     "react-card-flip": "^1.2.3",
